cargo_errors.txt
[0m[1m[38;5;11mwarning[0m[0m[1m[38;5;15m: fields `head_pointers` and `next_pointers` are never read[0m
[0m  [0m[0m[1m[38;5;14m--> [0m[0mastraweave-fluids\src\lib.rs:41:5[0m
[0m   [0m[0m[1m[38;5;14m|[0m
[0m[1m[38;5;14m33[0m[0m [0m[0m[1m[38;5;14m|[0m[0m [0m[0mpub struct FluidSystem {[0m
[0m   [0m[0m[1m[38;5;14m|[0m[0m            [0m[0m[1m[38;5;14m-----------[0m[0m [0m[0m[1m[38;5;14mfields in this struct[0m
[0m[1m[38;5;14m...[0m
[0m[1m[38;5;14m41[0m[0m [0m[0m[1m[38;5;14m|[0m[0m [0m[0m    head_pointers: wgpu::Buffer,[0m
[0m   [0m[0m[1m[38;5;14m|[0m[0m     [0m[0m[1m[38;5;11m^^^^^^^^^^^^^[0m
[0m[1m[38;5;14m42[0m[0m [0m[0m[1m[38;5;14m|[0m[0m [0m[0m    next_pointers: wgpu::Buffer,[0m
[0m   [0m[0m[1m[38;5;14m|[0m[0m     [0m[0m[1m[38;5;11m^^^^^^^^^^^^^[0m
[0m   [0m[0m[1m[38;5;14m|[0m
[0m   [0m[0m[1m[38;5;14m= [0m[0m[1m[38;5;15mnote[0m[0m: `#[warn(dead_code)]` on by default[0m

[1m[33mwarning[0m[1m:[0m `astraweave-fluids` (lib) generated 1 warning
[1m[32m    Checking[0m fluids_demo v0.1.0 (C:\Users\pv2br\AstraWeave-AI-Native-Gaming-Engine\examples\fluids_demo)
[0m[1m[38;5;11mwarning[0m[0m[1m[38;5;15m: unused import: `Vec2`[0m
[0m [0m[0m[1m[38;5;14m--> [0m[0mexamples\fluids_demo\src\ocean_renderer.rs:2:18[0m
[0m  [0m[0m[1m[38;5;14m|[0m
[0m[1m[38;5;14m2[0m[0m [0m[0m[1m[38;5;14m|[0m[0m [0m[0muse glam::{Vec3, Vec2, Mat4};[0m
[0m  [0m[0m[1m[38;5;14m|[0m[0m                  [0m[0m[1m[38;5;11m^^^^[0m
[0m  [0m[0m[1m[38;5;14m|[0m
[0m  [0m[0m[1m[38;5;14m= [0m[0m[1m[38;5;15mnote[0m[0m: `#[warn(unused_imports)]` on by default[0m

[0m[1m[38;5;11mwarning[0m[0m[1m[38;5;15m: use of deprecated type alias `wgpu::ImageCopyTexture`: This has been renamed to `TexelCopyTextureInfo`, and will be removed in 25.0.0.[0m
[0m   [0m[0m[1m[38;5;14m--> [0m[0mexamples\fluids_demo\src\ocean_renderer.rs:430:19[0m
[0m    [0m[0m[1m[38;5;14m|[0m
[0m[1m[38;5;14m430[0m[0m [0m[0m[1m[38;5;14m|[0m[0m [0m[0m            wgpu::ImageCopyTexture {[0m
[0m    [0m[0m[1m[38;5;14m|[0m[0m                   [0m[0m[1m[38;5;11m^^^^^^^^^^^^^^^^[0m
[0m    [0m[0m[1m[38;5;14m|[0m
[0m    [0m[0m[1m[38;5;14m= [0m[0m[1m[38;5;15mnote[0m[0m: `#[warn(deprecated)]` on by default[0m

[0m[1m[38;5;11mwarning[0m[0m[1m[38;5;15m: use of deprecated type alias `wgpu::ImageDataLayout`: This has been renamed to `TexelCopyBufferLayout`, and will be removed in 25.0.0.[0m
[0m   [0m[0m[1m[38;5;14m--> [0m[0mexamples\fluids_demo\src\ocean_renderer.rs:437:19[0m
[0m    [0m[0m[1m[38;5;14m|[0m
[0m[1m[38;5;14m437[0m[0m [0m[0m[1m[38;5;14m|[0m[0m [0m[0m            wgpu::ImageDataLayout {[0m
[0m    [0m[0m[1m[38;5;14m|[0m[0m                   [0m[0m[1m[38;5;11m^^^^^^^^^^^^^^^[0m

[0m[1m[38;5;11mwarning[0m[0m[1m[38;5;15m: use of deprecated type alias `wgpu::ImageCopyTexture`: This has been renamed to `TexelCopyTextureInfo`, and will be removed in 25.0.0.[0m
[0m   [0m[0m[1m[38;5;14m--> [0m[0mexamples\fluids_demo\src\ocean_renderer.rs:494:19[0m
[0m    [0m[0m[1m[38;5;14m|[0m
[0m[1m[38;5;14m494[0m[0m [0m[0m[1m[38;5;14m|[0m[0m [0m[0m            wgpu::ImageCopyTexture {[0m
[0m    [0m[0m[1m[38;5;14m|[0m[0m                   [0m[0m[1m[38;5;11m^^^^^^^^^^^^^^^^[0m

[0m[1m[38;5;11mwarning[0m[0m[1m[38;5;15m: use of deprecated type alias `wgpu::ImageDataLayout`: This has been renamed to `TexelCopyBufferLayout`, and will be removed in 25.0.0.[0m
[0m   [0m[0m[1m[38;5;14m--> [0m[0mexamples\fluids_demo\src\ocean_renderer.rs:501:19[0m
[0m    [0m[0m[1m[38;5;14m|[0m
[0m[1m[38;5;14m501[0m[0m [0m[0m[1m[38;5;14m|[0m[0m [0m[0m            wgpu::ImageDataLayout {[0m
[0m    [0m[0m[1m[38;5;14m|[0m[0m                   [0m[0m[1m[38;5;11m^^^^^^^^^^^^^^^[0m

[0m[1m[38;5;9merror[E0308][0m[0m[1m[38;5;15m: mismatched types[0m
[0m   [0m[0m[1m[38;5;14m--> [0m[0mexamples\fluids_demo\src\ocean_renderer.rs:259:30[0m
[0m    [0m[0m[1m[38;5;14m|[0m
[0m[1m[38;5;14m259[0m[0m [0m[0m[1m[38;5;14m|[0m[0m [0m[0m                entry_point: "vs_main",[0m
[0m    [0m[0m[1m[38;5;14m|[0m[0m                              [0m[0m[1m[38;5;9m^^^^^^^^^[0m[0m [0m[0m[1m[38;5;9mexpected `Option<&str>`, found `&str`[0m
[0m    [0m[0m[1m[38;5;14m|[0m
[0m    [0m[0m[1m[38;5;14m= [0m[0m[1m[38;5;15mnote[0m[0m:   expected enum `[0m[0m[1m[35mOption<&str>[0m[0m`[0m
[0m            found reference `[0m[0m[1m[35m&'static str[0m[0m`[0m
[0m[1m[38;5;14mhelp[0m[0m: try wrapping the expression in `Some`[0m
[0m    [0m[0m[1m[38;5;14m|[0m
[0m[1m[38;5;14m259[0m[0m [0m[0m[1m[38;5;14m| [0m[0m                entry_point: [0m[0m[38;5;10mSome([0m[0m"vs_main"[0m[0m[38;5;10m)[0m[0m,[0m
[0m    [0m[0m[1m[38;5;14m|[0m[0m                              [0m[0m[38;5;10m+++++[0m[0m         [0m[0m[38;5;10m+[0m

[0m[1m[38;5;9merror[E0308][0m[0m[1m[38;5;15m: mismatched types[0m
[0m   [0m[0m[1m[38;5;14m--> [0m[0mexamples\fluids_demo\src\ocean_renderer.rs:265:30[0m
[0m    [0m[0m[1m[38;5;14m|[0m
[0m[1m[38;5;14m265[0m[0m [0m[0m[1m[38;5;14m|[0m[0m [0m[0m                entry_point: "fs_main",[0m
[0m    [0m[0m[1m[38;5;14m|[0m[0m                              [0m[0m[1m[38;5;9m^^^^^^^^^[0m[0m [0m[0m[1m[38;5;9mexpected `Option<&str>`, found `&str`[0m
[0m    [0m[0m[1m[38;5;14m|[0m
[0m    [0m[0m[1m[38;5;14m= [0m[0m[1m[38;5;15mnote[0m[0m:   expected enum `[0m[0m[1m[35mOption<&str>[0m[0m`[0m
[0m            found reference `[0m[0m[1m[35m&'static str[0m[0m`[0m
[0m[1m[38;5;14mhelp[0m[0m: try wrapping the expression in `Some`[0m
[0m    [0m[0m[1m[38;5;14m|[0m
[0m[1m[38;5;14m265[0m[0m [0m[0m[1m[38;5;14m| [0m[0m                entry_point: [0m[0m[38;5;10mSome([0m[0m"fs_main"[0m[0m[38;5;10m)[0m[0m,[0m
[0m    [0m[0m[1m[38;5;14m|[0m[0m                              [0m[0m[38;5;10m+++++[0m[0m         [0m[0m[38;5;10m+[0m

[0m[1m[38;5;11mwarning[0m[0m[1m[38;5;15m: use of deprecated method `winit::event_loop::EventLoop::<T>::create_window`: use `ActiveEventLoop::create_window` instead[0m
[0m   [0m[0m[1m[38;5;14m--> [0m[0mexamples\fluids_demo\src\main.rs:343:20[0m
[0m    [0m[0m[1m[38;5;14m|[0m
[0m[1m[38;5;14m343[0m[0m [0m[0m[1m[38;5;14m|[0m[0m [0m[0m        event_loop.create_window(Window::default_attributes()[0m
[0m    [0m[0m[1m[38;5;14m|[0m[0m                    [0m[0m[1m[38;5;11m^^^^^^^^^^^^^[0m

[0m[1m[38;5;11mwarning[0m[0m[1m[38;5;15m: use of deprecated method `winit::event_loop::EventLoop::<T>::run`: use `EventLoop::run_app` instead[0m
[0m   [0m[0m[1m[38;5;14m--> [0m[0mexamples\fluids_demo\src\main.rs:350:16[0m
[0m    [0m[0m[1m[38;5;14m|[0m
[0m[1m[38;5;14m350[0m[0m [0m[0m[1m[38;5;14m|[0m[0m [0m[0m    event_loop.run(move |event, elwt| {[0m
[0m    [0m[0m[1m[38;5;14m|[0m[0m                [0m[0m[1m[38;5;11m^^^[0m

[0m[1m[38;5;15mFor more information about this error, try `rustc --explain E0308`.[0m
[1m[33mwarning[0m[1m:[0m `fluids_demo` (bin "fluids_demo") generated 7 warnings
[1m[31merror[0m[1m:[0m could not compile `fluids_demo` (bin "fluids_demo") due to 2 previous errors; 7 warnings emitted
